FGCP/7.4/DualAZ/BaseVPC_FGCP_DualAZ.template.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "(v5.6 - Consistent Naming) AWS CFT to deploy a segmented VPC across 2 AZs with consistent WAN/LAN naming.",
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": { "default": "VPC and AZ Configuration" },
                    "Parameters": [ "VPCCIDR", "AZ1", "AZ2" ]
                },
                {
                    "Label": { "default": "Subnet Configuration for AZ1" },
                    "Parameters": [ 
                        "MgmtSubnetAZ1", 
                        "WANSdwanSubnetAZ1", "LANSdwanSubnetAZ1", "HASdwanSubnetAZ1",
                        "WANDmzeSubnetAZ1", "LANDmzeSubnetAZ1", "HADmzeSubnetAZ1",
                        "WANDmziSubnetAZ1", "LANDmziSubnetAZ1", "HADmziSubnetAZ1"
                    ]
                },
                {
                    "Label": { "default": "Subnet Configuration for AZ2" },
                    "Parameters": [ 
                        "MgmtSubnetAZ2",
                        "WANSdwanSubnetAZ2", "LANSdwanSubnetAZ2", "HASdwanSubnetAZ2",
                        "WANDmzeSubnetAZ2", "LANDmzeSubnetAZ2", "HADmzeSubnetAZ2",
                        "WANDmziSubnetAZ2", "LANDmziSubnetAZ2", "HADmziSubnetAZ2"
                     ]
                }
            ]
        }
    },
    "Parameters": {
        "VPCCIDR": { "Type": "String", "Default": "10.4.0.0/22" },
        "AZ1": { "Type": "AWS::EC2::AvailabilityZone::Name", "Description": "Select the first Availability Zone." },
        "AZ2": { "Type": "AWS::EC2::AvailabilityZone::Name", "Description": "Select the second Availability Zone." },
        "MgmtSubnetAZ1": { "Type": "String", "Default": "10.4.0.64/28" },
        "WANSdwanSubnetAZ1": { "Type": "String", "Default": "10.4.0.0/27" },
        "LANSdwanSubnetAZ1": { "Type": "String", "Default": "10.4.0.32/28" },
        "HASdwanSubnetAZ1": { "Type": "String", "Default": "10.4.0.48/28" },
        "WANDmzeSubnetAZ1": { "Type": "String", "Default": "10.4.0.96/27" },
        "LANDmzeSubnetAZ1": { "Type": "String", "Default": "10.4.0.80/28" },
        "HADmzeSubnetAZ1": { "Type": "String", "Default": "10.4.0.128/28" },
        "WANDmziSubnetAZ1": { "Type": "String", "Default": "10.4.0.160/28" },
        "LANDmziSubnetAZ1": { "Type": "String", "Default": "10.4.0.144/28" },
        "HADmziSubnetAZ1": { "Type": "String", "Default": "10.4.0.176/28" },
        "MgmtSubnetAZ2": { "Type": "String", "Default": "10.4.1.0/28" },
        "WANSdwanSubnetAZ2": { "Type": "String", "Default": "10.4.0.192/27" },
        "LANSdwanSubnetAZ2": { "Type": "String", "Default": "10.4.0.224/28" },
        "HASdwanSubnetAZ2": { "Type": "String", "Default": "10.4.0.240/28" },
        "WANDmzeSubnetAZ2": { "Type": "String", "Default": "10.4.1.32/27" },
        "LANDmzeSubnetAZ2": { "Type": "String", "Default": "10.4.1.16/28" },
        "HADmzeSubnetAZ2": { "Type": "String", "Default": "10.4.1.64/28" },
        "WANDmziSubnetAZ2": { "Type": "String", "Default": "10.4.1.96/28" },
        "LANDmziSubnetAZ2": { "Type": "String", "Default": "10.4.1.80/28" },
        "HADmziSubnetAZ2": { "Type": "String", "Default": "10.4.1.112/28" }
    },
    "Resources": {
        "VPC": { "Type": "AWS::EC2::VPC", "Properties": { "CidrBlock": { "Ref": "VPCCIDR" }, "EnableDnsSupport": "true", "EnableDnsHostnames": "true", "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-VPC" } } ] } },
        "InternetGateway": { "Type": "AWS::EC2::InternetGateway", "Properties": { "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-IGW" } } ] } },
        "AttachGateway": { "Type": "AWS::EC2::VPCGatewayAttachment", "Properties": { "VpcId": { "Ref": "VPC" }, "InternetGatewayId": { "Ref": "InternetGateway" } } },
        "MgmtRouteTableAZ1": { "Type": "AWS::EC2::RouteTable", "Properties": { "VpcId": { "Ref": "VPC" }, "Tags": [ { "Key": "Name", "Value": "MGMT-RT-AZ1" } ] } },
        "DefaultMgmtRouteAZ1": { "Type": "AWS::EC2::Route", "DependsOn": "AttachGateway", "Properties": { "RouteTableId": { "Ref": "MgmtRouteTableAZ1" }, "DestinationCidrBlock": "0.0.0.0/0", "GatewayId": { "Ref": "InternetGateway" } } },
        "MgmtRouteTableAZ2": { "Type": "AWS::EC2::RouteTable", "Properties": { "VpcId": { "Ref": "VPC" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-MGMT-RT-AZ2" } } ] } },
        "DefaultMgmtRouteAZ2": { "Type": "AWS::EC2::Route", "DependsOn": "AttachGateway", "Properties": { "RouteTableId": { "Ref": "MgmtRouteTableAZ2" }, "DestinationCidrBlock": "0.0.0.0/0", "GatewayId": { "Ref": "InternetGateway" } } },
        "WANRouteTableAZ1": { "Type": "AWS::EC2::RouteTable", "Properties": { "VpcId": { "Ref": "VPC" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-WAN-RT-AZ1" } } ] } },
        "DefaultWANRouteAZ1": { "Type": "AWS::EC2::Route", "DependsOn": "AttachGateway", "Properties": { "RouteTableId": { "Ref": "WANRouteTableAZ1" }, "DestinationCidrBlock": "0.0.0.0/0", "GatewayId": { "Ref": "InternetGateway" } } },
        "WANRouteTableAZ2": { "Type": "AWS::EC2::RouteTable", "Properties": { "VpcId": { "Ref": "VPC" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-WAN-RT-AZ2" } } ] } },
        "DefaultWANRouteAZ2": { "Type": "AWS::EC2::Route", "DependsOn": "AttachGateway", "Properties": { "RouteTableId": { "Ref": "WANRouteTableAZ2" }, "DestinationCidrBlock": "0.0.0.0/0", "GatewayId": { "Ref": "InternetGateway" } } },
        "LANRouteTableAZ1": { "Type": "AWS::EC2::RouteTable", "Properties": { "VpcId": { "Ref": "VPC" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-LAN-RT-AZ1" } } ] } },
        "LANRouteTableAZ2": { "Type": "AWS::EC2::RouteTable", "Properties": { "VpcId": { "Ref": "VPC" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-LAN-RT-AZ2" } } ] } },
        "HARouteTableAZ1": { "Type": "AWS::EC2::RouteTable", "Properties": { "VpcId": { "Ref": "VPC" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-HA-RT-AZ1" } } ] } },
        "HARouteTableAZ2": { "Type": "AWS::EC2::RouteTable", "Properties": { "VpcId": { "Ref": "VPC" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-HA-RT-AZ2" } } ] } },
        "S3Endpoint": { "Type": "AWS::EC2::VPCEndpoint", "Properties": { "VpcId": { "Ref": "VPC" }, "ServiceName": { "Fn::Sub": "com.amazonaws.${AWS::Region}.s3" }, "RouteTableIds": [ { "Ref": "MgmtRouteTableAZ1" }, { "Ref": "MgmtRouteTableAZ2" }, { "Ref": "WANRouteTableAZ1" }, { "Ref": "WANRouteTableAZ2" }, { "Ref": "LANRouteTableAZ1" }, { "Ref": "LANRouteTableAZ2" } ] } },
        "SubnetMgmtAZ1": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "MgmtSubnetAZ1" }, "AvailabilityZone": { "Ref": "AZ1" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-MGMT-AZ1" } } ] } },
        "SubnetMgmtAZ2": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "MgmtSubnetAZ2" }, "AvailabilityZone": { "Ref": "AZ2" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-MGMT-AZ2" } } ] } },
        "SubnetWANDmzeAZ1": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "WANDmzeSubnetAZ1" }, "AvailabilityZone": { "Ref": "AZ1" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-WAN-DMZe-AZ1" } } ] } },
        "SubnetWANDmzeAZ2": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "WANDmzeSubnetAZ2" }, "AvailabilityZone": { "Ref": "AZ2" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-WAN-DMZe-AZ2" } } ] } },
        "SubnetLANDmzeAZ1": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "LANDmzeSubnetAZ1" }, "AvailabilityZone": { "Ref": "AZ1" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-LAN-DMZe-AZ1" } } ] } },
        "SubnetLANDmzeAZ2": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "LANDmzeSubnetAZ2" }, "AvailabilityZone": { "Ref": "AZ2" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-LAN-DMZe-AZ2" } } ] } },
        "SubnetHADmzeAZ1": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "HADmzeSubnetAZ1" }, "AvailabilityZone": { "Ref": "AZ1" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-HA-DMZe-AZ1" } } ] } },
        "SubnetHADmzeAZ2": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "HADmzeSubnetAZ2" }, "AvailabilityZone": { "Ref": "AZ2" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-HA-DMZe-AZ2" } } ] } },
        "SubnetWANSdwanAZ1": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "WANSdwanSubnetAZ1" }, "AvailabilityZone": { "Ref": "AZ1" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-WAN-SDWAN-AZ1" } } ] } },
        "SubnetWANSdwanAZ2": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "WANSdwanSubnetAZ2" }, "AvailabilityZone": { "Ref": "AZ2" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-WAN-SDWAN-AZ2" } } ] } },
        "SubnetLANSdwanAZ1": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "LANSdwanSubnetAZ1" }, "AvailabilityZone": { "Ref": "AZ1" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-LAN-SDWAN-AZ1" } } ] } },
        "SubnetLANSdwanAZ2": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "LANSdwanSubnetAZ2" }, "AvailabilityZone": { "Ref": "AZ2" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-LAN-SDWAN-AZ2" } } ] } },
        "SubnetHASdwanAZ1": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "HASdwanSubnetAZ1" }, "AvailabilityZone": { "Ref": "AZ1" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-HA-SDWAN-AZ1" } } ] } },
        "SubnetHASdwanAZ2": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "HASdwanSubnetAZ2" }, "AvailabilityZone": { "Ref": "AZ2" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-HA-SDWAN-AZ2" } } ] } },
        "SubnetWANDmziAZ1": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "WANDmziSubnetAZ1" }, "AvailabilityZone": { "Ref": "AZ1" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-WAN-DMZi-AZ1" } } ] } },
        "SubnetWANDmziAZ2": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "WANDmziSubnetAZ2" }, "AvailabilityZone": { "Ref": "AZ2" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-WAN-DMZi-AZ2" } } ] } },
        "SubnetLANDmziAZ1": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "LANDmziSubnetAZ1" }, "AvailabilityZone": { "Ref": "AZ1" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-LAN-DMZi-AZ1" } } ] } },
        "SubnetLANDmziAZ2": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "LANDmziSubnetAZ2" }, "AvailabilityZone": { "Ref": "AZ2" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-LAN-DMZi-AZ2" } } ] } },
        "SubnetHADmziAZ1": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "HADmziSubnetAZ1" }, "AvailabilityZone": { "Ref": "AZ1" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-HA-DMZi-AZ1" } } ] } },
        "SubnetHADmziAZ2": { "Type": "AWS::EC2::Subnet", "Properties": { "VpcId": { "Ref": "VPC" }, "CidrBlock": { "Ref": "HADmziSubnetAZ2" }, "AvailabilityZone": { "Ref": "AZ2" }, "Tags": [ { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-HA-DMZi-AZ2" } } ] } },
        "AssocMgmtAZ1": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetMgmtAZ1" }, "RouteTableId": { "Ref": "MgmtRouteTableAZ1" } } },
        "AssocMgmtAZ2": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetMgmtAZ2" }, "RouteTableId": { "Ref": "MgmtRouteTableAZ2" } } },
        "AssocWANDmzeAZ1": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetWANDmzeAZ1" }, "RouteTableId": { "Ref": "WANRouteTableAZ1" } } },
        "AssocWANDmzeAZ2": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetWANDmzeAZ2" }, "RouteTableId": { "Ref": "WANRouteTableAZ2" } } },
        "AssocWANSdwanAZ1": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetWANSdwanAZ1" }, "RouteTableId": { "Ref": "WANRouteTableAZ1" } } },
        "AssocWANSdwanAZ2": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetWANSdwanAZ2" }, "RouteTableId": { "Ref": "WANRouteTableAZ2" } } },
        "AssocWANDmziAZ1": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetWANDmziAZ1" }, "RouteTableId": { "Ref": "WANRouteTableAZ1" } } },
        "AssocWANDmziAZ2": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetWANDmziAZ2" }, "RouteTableId": { "Ref": "WANRouteTableAZ2" } } },
        "AssocLANDmzeAZ1": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetLANDmzeAZ1" }, "RouteTableId": { "Ref": "LANRouteTableAZ1" } } },
        "AssocLANDmzeAZ2": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetLANDmzeAZ2" }, "RouteTableId": { "Ref": "LANRouteTableAZ2" } } },
        "AssocLANSdwanAZ1": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetLANSdwanAZ1" }, "RouteTableId": { "Ref": "LANRouteTableAZ1" } } },
        "AssocLANSdwanAZ2": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetLANSdwanAZ2" }, "RouteTableId": { "Ref": "LANRouteTableAZ2" } } },
        "AssocLANDmziAZ1": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetLANDmziAZ1" }, "RouteTableId": { "Ref": "LANRouteTableAZ1" } } },
        "AssocLANDmziAZ2": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetLANDmziAZ2" }, "RouteTableId": { "Ref": "LANRouteTableAZ2" } } },
        "AssocHADmzeAZ1": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetHADmzeAZ1" }, "RouteTableId": { "Ref": "HARouteTableAZ1" } } },
        "AssocHADmzeAZ2": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetHADmzeAZ2" }, "RouteTableId": { "Ref": "HARouteTableAZ2" } } },
        "AssocHASdwanAZ1": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetHASdwanAZ1" }, "RouteTableId": { "Ref": "HARouteTableAZ1" } } },
        "AssocHASdwanAZ2": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetHASdwanAZ2" }, "RouteTableId": { "Ref": "HARouteTableAZ2" } } },
        "AssocHADmziAZ1": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetHADmziAZ1" }, "RouteTableId": { "Ref": "HARouteTableAZ1" } } },
        "AssocHADmziAZ2": { "Type": "AWS::EC2::SubnetRouteTableAssociation", "Properties": { "SubnetId": { "Ref": "SubnetHADmziAZ2" }, "RouteTableId": { "Ref": "HARouteTableAZ2" } } }
    },
    "Outputs": {
        "VPCId": { "Description": "ID of the created VPC", "Value": { "Ref": "VPC" } }
    }
}
